Fixed (some) scrollbars

--- a/public/css/content.css
+++ b/public/css/content.css
@@ -80,7 +80,7 @@
 #table-contents {
 	width:100%;
 	height:100%;
-	overflow:scroll;
+	overflow:none;
 }
 
 #table-contents thead th {
